# msgym

./: .gitmodules  README.md  pyproject.toml
msgym/envs/: locomotionFull_v1.py  locomotionLegs_v1.py  utils.py
tests/: test_environments_smoke.py  test_ms_human_700_installed.py
