[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "msgym"
version = "0.1.0"
description = "Gymnasium environments for MS-Human-700 musculoskeletal human model in MuJoCo"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }

dependencies = [
    "gymnasium>=1.0.1",
    "mujoco>=3.1.2",
    "imageio>=2.31.1",
    "pandas>=2.0.3",
    "numpy>=1.24.4",
    "scipy>=1.10.1",
    "packaging>=25.0",
]

[project.optional-dependencies]
dynsyn = [
    "stable_baselines3[extra]>=2.3.2",
    "sb3_contrib>=2.3.0",
    "moviepy>=1.0.3",
    "gymnasium>=0.29.1",
    "tensorboard>=2.12.1",
    "setuptools<81",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = [".", "DynSyn-SAC"]
include = ["msgym*", "DynSyn*"]

[tool.setuptools.package-data]
"msgym" = ["MS-Human-700/**/*"]

[tool.setuptools.data-files]
"MS-Human-700" = [
    "MS-Human-700/README.md",
    "MS-Human-700/LICENSE",
    "MS-Human-700/**/*.xml",
    "MS-Human-700/**/*.obj",
    "MS-Human-700/**/*.stl",
]
